ChangeLog for jMList - Media file listing generator
===================================================

[ Version 0.1.0 ]
** 2005 Mar 26 - Juliano Ravasi Ferraz <jferraz at users sourceforge net>
   ### Version 0.1.0 released.

** 2005 Feb 22 - Juliano Ravasi Ferraz <jferraz at users sourceforge net>
   * configure.ac, m4/ogg.m4, m4/vorbis.m4:
      Added checks for libogg and libvorbis.

   * file-mpeg.c:
      <tag> elements are now child of an <audio-stream> tag. This is because
      an audio container like ogg may have multiple audio streams, each one
      with its own tags.
      + styles/text-simple.xsl: Updated.

   * file.c, file-vorbis.c:
      Added support for OGG Vorbis files.


[ Version 0.0.2 ]
** 2005 Feb 20 - Juliano Ravasi Ferraz <jferraz at users sourceforge net>
   * style.c, main.c:
      Style engine implemented. New options --style and --list-styles. The
      current active stylesheet can also define its own command-line
      options. Stylesheets have metadata stored on .xml files.

   * (everything):
      Indentation and folding fixes. Improved documentation. Fixed some
      inlines and consts in function prototypes. Better logging support.

   ### Version 0.0.2 released (repository only).

** 2005 Feb 19 - Juliano Ravasi Ferraz <jferraz at users sourceforge net>
   * configure.ac, main.c:
      Added URL to project metadata, to the output of --version and to the
      generated XML output (to be used on stylesheets).

   * file-mpeg-id3v2.c:
      Added charset detection/conversion to ID3v2 also.

   * styles/xhtml-collapsible.xsl:
      Added a XSLT stylesheet to produce a XHTML page of a media library
      in a collapsible tree format. Uses CSS and Javascript. Very nice
      output.

   * main.c, file.c, directory.c:
      Added --verbose option.

** 2005 Feb 16 - Juliano Ravasi Ferraz <jferraz at users sourceforge net>
   * file.c, file-mpeg.c, file-mpeg-id3v1.c, file-mpeg-id3v2.c: